fixed collapsing to make work for individual message, added route and procedurefor deleting messages

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -121,6 +121,14 @@ h1,h2,h3,h4,h5,h6{
     margin: 20px;
 }
 
+a.deletemessage{
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    height: 100%;        
+    width: 100%;
+}
+
 /*navbar-nav.li{
     color:blue;
 }
